# classic-mcs2-eval

./: .gitignore  CLAUDE.md  README.md  config.py  prepare_submission.py  pyproject.toml  requirements.txt  runner.py  schemas.py
metrics/: __init__.py
metrics/classic/: __init__.py  bartscore_metric.py  base.py  bertscore_metric.py  rouge_metric.py  summac_metric.py
tests/: test_metrics.py  test_runner.py
